--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Navbar -->
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <div class="container">
+        <div class="">
             <img src="./Images/logo.png" id="logo" alt="">
             <a class="navbar-brand" href="https://www.instagram.com/arshman_7/" style="font-family: 'Yellowtail', cursive;">Warner Bros Abu Dhabhi</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
